add TB Consult sheet report