@@ -2,7 +2,6 @@ package org.openmrs.module.rwandareports.reporting;
 
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -27,26 +26,27 @@ import org.openmrs.module.rowperpatientreports.dataset.definition.PatientDataSet
 import org.openmrs.module.rowperpatientreports.patientdata.definition.AllObservationValues;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.CurrentOrdersRestrictedByConceptSet;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.CustomCalculationBasedOnMultiplePatientDataDefinitions;
-import org.openmrs.module.rowperpatientreports.patientdata.definition.FirstDrugOrderStartedRestrictedByConceptSet;
+import org.openmrs.module.rowperpatientreports.patientdata.definition.DateOfProgramEnrolment;
+import org.openmrs.module.rowperpatientreports.patientdata.definition.IsEnrolledInProgram;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.MostRecentObservation;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.MultiplePatientDataDefinitions;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.PatientIdentifier;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.PatientProperty;
 import org.openmrs.module.rowperpatientreports.patientdata.definition.PatientRelationship;
-import org.openmrs.module.rwandareports.customcalculators.ArtDetails;
-import org.openmrs.module.rwandareports.customcalculators.HIVAdultAlerts;
+import org.openmrs.module.rwandareports.customcalculators.TBAlerts;
 import org.openmrs.module.rwandareports.dataset.HIVARTRegisterDataSetDefinition;
 import org.openmrs.module.rwandareports.filter.DrugNameFilter;
 import org.openmrs.module.rwandareports.filter.LastThreeObsFilter;
 import org.openmrs.module.rwandareports.filter.ObservationFilter;
+import org.openmrs.module.rwandareports.filter.PosOrNegFilter;
 
-public class SetupAdultHIVConsultationSheet {
+public class SetupTBConsultationSheet {
 	
 	Helper h = new Helper();
 	
 	private HashMap<String, String> properties;
 	
-	public SetupAdultHIVConsultationSheet(Helper helper) {
+	public SetupTBConsultationSheet(Helper helper) {
 		h = helper;
 	}
 	
@@ -58,8 +58,8 @@ public class SetupAdultHIVConsultationSheet {
 		
 		createCohortDefinitions();
 		ReportDefinition rd = createReportDefinition();
-		h.createRowPerPatientXlsOverview(rd, "AdultHIVConsultationSheet.xls", "AdultHIVConsultationSheet.xls_", null);
-//		ReportDesign design = h.createRowPerPatientXlsOverviewReportDesign(rd, "AdultHIVConsultationSheetV2.xls", "AdultHIVConsultationSheetV2.xls_", null);
+		h.createRowPerPatientXlsOverview(rd, "TBConsultationSheet.xls", "TBConsultationSheet.xls_", null);
+//		ReportDesign design = h.createRowPerPatientXlsOverviewReportDesign(rd, "TBConsultationSheetV2.xls", "TBConsultationSheetV2.xls_", null);
 //		
 //		Properties props = new Properties();
 //		props.put("repeatSheet1Row6", "dataSet");
@@ -71,31 +71,32 @@ public class SetupAdultHIVConsultationSheet {
 	public void delete() {
 		ReportService rs = Context.getService(ReportService.class);
 		for (ReportDesign rd : rs.getAllReportDesigns(false)) {
-			if ("AdultHIVConsultationSheet.xls_".equals(rd.getName())) {
+			if ("TBConsultationSheet.xls_".equals(rd.getName())) {
 				rs.purgeReportDesign(rd);
 			}
 		}
-		h.purgeDefinition(ReportDefinition.class, "Adult HIV Consultation Sheet");
+		h.purgeDefinition(ReportDefinition.class, "TB Consultation Sheet");
 		
-		h.purgeDefinition(HIVARTRegisterDataSetDefinition.class, "Adult HIV Consultation Sheet Data Set");
+		h.purgeDefinition(HIVARTRegisterDataSetDefinition.class, "TB Consultation Sheet Data Set");
 		
-		h.purgeDefinition(CohortDefinition.class, "AdultHIVLocation: Patients at location");
+		h.purgeDefinition(CohortDefinition.class, "TBLocation: Patients at location");
 	}
 	
 	
 	private ReportDefinition createReportDefinition() {
 		ReportDefinition reportDefinition = new ReportDefinition();
-		reportDefinition.setName("Adult HIV Consultation Sheet");
+		reportDefinition.setName("TB Consultation Sheet");
 		
 		reportDefinition.addParameter(new Parameter("location", "Health Center", Location.class));
 		reportDefinition.addParameter(new Parameter("state", "Group", ProgramWorkflowState.class));
 		//This is waiting on changes to the reporting framework to allow for filtering of the state parameter
 		//so the user is only presented with the treatment group options
 		Properties stateProperties = new Properties();
-		stateProperties.setProperty("Program", properties.get("ADULT_HIV_PROGRAM"));
-		stateProperties.setProperty("Workflow", properties.get("TREATMENT_STATUS"));
+		stateProperties.setProperty("Program", properties.get("TB_PROGRAM"));
+		stateProperties.setProperty("Workflow", properties.get("TREATMENT_GROUP"));
 		//reportDefinition.addParameter(new Parameter("state", "Group", ProgramWorkflowState.class, stateProperties));
-		reportDefinition.setBaseCohortDefinition(h.cohortDefinition("AdultHIVLocation: Patients at location"), ParameterizableUtil.createParameterMappings("location=${location}"));
+		
+		reportDefinition.setBaseCohortDefinition(h.cohortDefinition("TBLocation: Patients at location"), ParameterizableUtil.createParameterMappings("location=${location}"));
 		
 		createDataSetDefinition(reportDefinition);
 		
@@ -111,22 +112,22 @@ public class SetupAdultHIVConsultationSheet {
 		dataSetDefinition.setName(reportDefinition.getName() + " Data Set");
 		dataSetDefinition.addParameter(new Parameter("state", "State", ProgramWorkflowState.class));
 		
-		InStateCohortDefinition hivGroup = new InStateCohortDefinition();
-		hivGroup.addParameter(new Parameter("states", "Group", ProgramWorkflowState.class));
-		hivGroup.setName("hiv group");
-		dataSetDefinition.addFilter(hivGroup, ParameterizableUtil.createParameterMappings("states=${state}"));
+		InStateCohortDefinition tbGroup = new InStateCohortDefinition();
+		tbGroup.addParameter(new Parameter("states", "Group", ProgramWorkflowState.class));
+		tbGroup.setName("tb group");
+		dataSetDefinition.addFilter(tbGroup, ParameterizableUtil.createParameterMappings("states=${state}"));
 		
-		InProgramCohortDefinition inHIVProgram = new InProgramCohortDefinition();
-		inHIVProgram.setOnDate(Calendar.getInstance().getTime());
-		inHIVProgram.setName("adultHIV: In Program");
+		InProgramCohortDefinition inTBProgram = new InProgramCohortDefinition();
+		inTBProgram.setOnDate(Calendar.getInstance().getTime());
+		inTBProgram.setName("tb: In Program");
 		List<Program> programs = new ArrayList<Program>();
-		Program hiv = Context.getProgramWorkflowService().getProgram(Integer.parseInt(properties.get("ADULT_HIV_PROGRAM_ID")));
-		if(hiv != null)
+		Program tb = Context.getProgramWorkflowService().getProgram(Integer.parseInt(properties.get("TB_PROGRAM_ID")));
+		if(tb != null)
 		{
-			programs.add(hiv);
+			programs.add(tb);
 		}
-		inHIVProgram.setPrograms(programs);
-		dataSetDefinition.addFilter(inHIVProgram, new HashMap<String,Object>());
+		inTBProgram.setPrograms(programs);
+		dataSetDefinition.addFilter(inTBProgram, new HashMap<String,Object>());
 		
 		PatientProperty givenName = new PatientProperty("givenName");
 		dataSetDefinition.addColumn(givenName, new HashMap<String,Object>());
@@ -151,6 +152,9 @@ public class SetupAdultHIVConsultationSheet {
 		PatientProperty age = new PatientProperty("age");
 		dataSetDefinition.addColumn(age, new HashMap<String,Object>());
 		
+		PatientProperty gender = new PatientProperty("gender");
+		dataSetDefinition.addColumn(gender, new HashMap<String,Object>());
+		
 		AllObservationValues weight = new AllObservationValues();
 		Concept weightConcept = Context.getConceptService().getConcept(new Integer(properties.get("WEIGHT_CONCEPT")));
 		weight.setConcept(weightConcept);
@@ -159,12 +163,17 @@ public class SetupAdultHIVConsultationSheet {
 		weight.setDateFormat("ddMMMyy");
 		weight.setOutputFilter(new ObservationFilter());
 		
-		
 		MostRecentObservation mostRecentWeight = new MostRecentObservation();
 		mostRecentWeight.setConcept(weightConcept);
 		mostRecentWeight.setName("RecentWeight");
 		mostRecentWeight.setDateFormat("@ddMMMyy");
 		dataSetDefinition.addColumn(mostRecentWeight, new HashMap<String,Object>());
+		
+		IsEnrolledInProgram hivEnrolment = new IsEnrolledInProgram();
+		hivEnrolment.setProgramId(new Integer(properties.get("ADULT_HIV_PROGRAM_ID")));
+		hivEnrolment.setFilter(new PosOrNegFilter());
+		hivEnrolment.setName("HIVStatus");
+		dataSetDefinition.addColumn(hivEnrolment, new HashMap<String,Object>());
 		
 		Concept heightConcept = Context.getConceptService().getConcept(new Integer(properties.get("HEIGHT_CONCEPT")));
 		
@@ -172,21 +181,18 @@ public class SetupAdultHIVConsultationSheet {
 		mostRecentHeight.setConcept(heightConcept);
 		mostRecentHeight.setName("RecentHeight");
 		
-		AllObservationValues cd4Test = new AllObservationValues();
+		MostRecentObservation cd4Test = new MostRecentObservation();
 		Concept cd4Concept = Context.getConceptService().getConcept(Integer.valueOf(properties.get("CD4_CONCEPT")));
 		cd4Test.setConcept(cd4Concept);
 		cd4Test.setName("CD4Test");
-		cd4Test.setFilter(new LastThreeObsFilter());
-		cd4Test.setDateFormat("ddMMMyy");
-		cd4Test.setOutputFilter(new ObservationFilter());
+		cd4Test.setDateFormat("@ddMMMyy");
 		dataSetDefinition.addColumn(cd4Test, new HashMap<String, Object>());
 		
-		Concept viralConcept = Context.getConceptService().getConcept(Integer.valueOf(properties.get("VIRAL_LOAD_CONCEPT")));
-		MostRecentObservation viralLoad = new MostRecentObservation();
-		viralLoad.setConcept(viralConcept);
-		viralLoad.setName("ViralLoad");
-		viralLoad.setDateFormat("@ddMMMyy");
-		dataSetDefinition.addColumn(viralLoad, new HashMap<String,Object>());
+		DateOfProgramEnrolment tbStart = new DateOfProgramEnrolment();
+		tbStart.setName("tbStart");
+		tbStart.setProgramId(new Integer(properties.get("TB_PROGRAM_ID")));
+		tbStart.setDateFormat("ddMMMyy");
+		dataSetDefinition.addColumn(tbStart, new HashMap<String, Object>());
 		
 		PatientRelationship accomp = new PatientRelationship();
 		accomp.setName("AccompName");
@@ -204,19 +210,6 @@ public class SetupAdultHIVConsultationSheet {
 		artDrugs.setName("Regimen");
 		dataSetDefinition.addColumn(artDrugs, new HashMap<String, Object>());
 		
-//		FirstDrugOrderStartedRestrictedByConceptSet startDateDrugs = new FirstDrugOrderStartedRestrictedByConceptSet();
-//		startDateDrugs.setName("Start ART Regimen");
-//		startDateDrugs.setDescription("Start ART Regimen");
-//		startDateDrugs.setDrugConceptSetConcept(artDrugsSet);
-//		
-//		CustomCalculationBasedOnMultiplePatientDataDefinitions artDetails = new CustomCalculationBasedOnMultiplePatientDataDefinitions();
-//		artDetails.addPatientDataToBeEvaluated(artDrugs, new HashMap<String, Object>());
-//		artDetails.addPatientDataToBeEvaluated(startDateDrugs, new HashMap<String, Object>());
-//		artDetails.setName("artDetails");
-//		artDetails.setDescription("artDetails");
-//		artDetails.setCalculator(new ArtDetails());
-//		dataSetDefinition.addColumn(artDetails, new HashMap<String, Object>());
-		
 		CurrentOrdersRestrictedByConceptSet tbTreatment = new CurrentOrdersRestrictedByConceptSet();
 		tbTreatment.setName("TB Treatment");
 		tbTreatment.setDescription("TB Treatment");
@@ -228,10 +221,9 @@ public class SetupAdultHIVConsultationSheet {
 		
 		CustomCalculationBasedOnMultiplePatientDataDefinitions alert = new CustomCalculationBasedOnMultiplePatientDataDefinitions();
 		alert.setName("alert");
-		alert.addPatientDataToBeEvaluated(cd4Test, new HashMap<String, Object>());
 		alert.addPatientDataToBeEvaluated(weight, new HashMap<String, Object>());
 		alert.addPatientDataToBeEvaluated(mostRecentHeight, new HashMap<String, Object>());
-		alert.setCalculator(new HIVAdultAlerts());
+		alert.setCalculator(new TBAlerts());
 		dataSetDefinition.addColumn(alert, new HashMap<String, Object>());
 		
 		Map<String, Object> mappings = new HashMap<String, Object>();
@@ -247,7 +239,7 @@ public class SetupAdultHIVConsultationSheet {
 		SqlCohortDefinition location = new SqlCohortDefinition();
 		location
 		        .setQuery("select p.patient_id from patient p, person_attribute pa, person_attribute_type pat where p.patient_id = pa.person_id and pat.name ='Health Center' and pa.voided = 0 and pat.person_attribute_type_id = pa.person_attribute_type_id and pa.value = :location");
-		location.setName("AdultHIVLocation: Patients at location");
+		location.setName("TBLocation: Patients at location");
 		location.addParameter(new Parameter("location", "location", Location.class));
 		h.replaceCohortDefinition(location);
 		
@@ -259,14 +251,17 @@ public class SetupAdultHIVConsultationSheet {
 	{
 		properties = new HashMap<String, String>();
 		
-		String adultHIVId = Context.getAdministrationService().getGlobalProperty("hiv.programid.adult");
-		properties.put("ADULT_HIV_PROGRAM_ID", adultHIVId);
+		String tbId = Context.getAdministrationService().getGlobalProperty("tb.programid");
+		properties.put("TB_PROGRAM_ID", tbId);
 		
-		String adultHIV = Context.getAdministrationService().getGlobalProperty("reports.hivprogramname");
-		properties.put("ADULT_HIV_PROGRAM", adultHIV);
+		String hivId = Context.getAdministrationService().getGlobalProperty("hiv.programid.adult");
+		properties.put("ADULT_HIV_PROGRAM_ID", hivId);
 		
-		String treatmentStatus = Context.getAdministrationService().getGlobalProperty("reports.hivtreatmentstatus");
-		properties.put("TREATMENT_STATUS", treatmentStatus);
+		String tb = Context.getAdministrationService().getGlobalProperty("reports.tbprogramname");
+		properties.put("TB_PROGRAM", tb);
+		
+		String treatmentgroup = Context.getAdministrationService().getGlobalProperty("reports.tbworkflowgroup");
+		properties.put("TREATMENT_GROUP", treatmentgroup);
 		
 		String weightConcept = Context.getAdministrationService().getGlobalProperty("reports.weightConcept");
 		properties.put("WEIGHT_CONCEPT", weightConcept);
@@ -291,9 +286,6 @@ public class SetupAdultHIVConsultationSheet {
 		
 		String heightConcept = Context.getAdministrationService().getGlobalProperty("reports.heightConcept");
 		properties.put("HEIGHT_CONCEPT", heightConcept);
-		
-		String viralLoadConcept = Context.getAdministrationService().getGlobalProperty("reports.viralLoadConcept");
-		properties.put("VIRAL_LOAD_CONCEPT", viralLoadConcept);
 	}	
 	
 }
